--- a/package.json
+++ b/package.json
@@ -3,20 +3,22 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js"
+    "start": "node server.js",  // Add this line to define the production start script
+    "dev": "nodemon server.js",
+    "vercel-build": "npm install && npm run build" // Optional: if you need a build step
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "backend": "file:",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.5.3",
-    "nodemon": "^3.1.7"
+    "mongoose": "^8.5.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.7" 
   }
 }
