--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",  
-    "dev": "nodemon server.js",
-    "vercel-build": "npm install && npm run build" 
+    "start": "node server.js", 
+    "dev": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
@@ -19,6 +18,6 @@
     "mongoose": "^8.5.3"
   },
   "devDependencies": {
-    "nodemon": "^3.1.7" 
+    "nodemon": "^3.1.7"
   }
 }
